Finish some aesthetic details. Add documentation.

--- a/app/src/main/res/layout/item_beer.xml
+++ b/app/src/main/res/layout/item_beer.xml
@@ -19,10 +19,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/padding_medium"
         android:ellipsize="end"
         android:lines="1"
         android:text="@string/placeholder"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/primary_text_light"
         android:textSize="@dimen/text_size_small"
         app:layout_constraintBottom_toTopOf="@id/beer_item_tagline"
         app:layout_constraintEnd_toStartOf="@id/beer_item_abv"
@@ -33,9 +34,11 @@
         android:id="@+id/beer_item_tagline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/padding_medium"
+        android:layout_marginTop="@dimen/padding_small"
+        android:ellipsize="end"
+        android:lines="1"
         android:text="@string/placeholder"
-        android:textSize="@dimen/text_size_small"
+        android:textColor="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/beer_item_name"
@@ -46,7 +49,10 @@
         android:id="@+id/beer_item_abv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/padding_medium"
         android:text="@string/placeholder"
+        android:textColor="@android:color/tertiary_text_light"
+        android:textSize="@dimen/text_size_small"
         app:layout_constraintBottom_toBottomOf="@id/beer_item_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/beer_item_name"
